--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "vite-project",
+  "name": "tech-forum-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check:modules": "depcheck --ignore-dirs=dist,.history"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "antd": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0"
   },
@@ -19,8 +23,14 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@unocss/preset-attributify": "^0.47.6",
+    "@unocss/preset-icons": "^0.47.6",
+    "@unocss/preset-uno": "^0.47.6",
+    "@unocss/reset": "^0.47.6",
+    "@unocss/transformer-directives": "^0.47.6",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
+    "unocss": "^0.47.6",
     "vite": "^4.0.0"
   }
 }
