--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": {
+    "email": "zhangjing1024798@gmail.com",
+    "url": "https://github.com/ChuTingzj"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -17,12 +21,17 @@
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.5.0"
+    "react-router-dom": "^6.5.0",
+    "react-window": "^1.8.8",
+    "react-window-infinite-loader": "^1.0.8"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
+    "@types/react-window-infinite-loader": "^1.0.6",
     "@unocss/preset-attributify": "^0.47.6",
     "@unocss/preset-icons": "^0.47.6",
     "@unocss/preset-uno": "^0.47.6",
