feature: 初始化rtk-query、pre-文章详情

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "baseUrl": ".",
+    "types": ["vitest/globals"],
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
