--- a/package.json
+++ b/package.json
@@ -9,17 +9,30 @@
   },
   "scripts": {
     "dev": "vite",
+    "coverage": "vitest run --coverage",
+    "test:watch": "vitest",
+    "test": "vitest run",
+    "test-ui:watch": "vitest --ui",
+    "test-ui": "vitest run --ui",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "check:modules": "depcheck --ignore-dirs=dist,.history"
   },
+  "packageManager": "pnpm",
+  "peerDependencies": {
+    "depcheck": ">=1.4.3",
+    "nodejs": ">=14",
+    "pnpm": ">=7.25.0",
+    "tsc": ">=4.7.4"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "@uiw/react-md-editor": "^3.20.2",
     "antd": "^5.0.7",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0"
   },
@@ -27,14 +40,19 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-test-renderer": "^18.0.0",
     "@unocss/preset-attributify": "^0.47.6",
     "@unocss/preset-icons": "^0.47.6",
     "@unocss/preset-uno": "^0.47.6",
     "@unocss/reset": "^0.47.6",
     "@unocss/transformer-directives": "^0.47.6",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/ui": "^0.27.2",
+    "happy-dom": "^8.1.5",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.9.3",
     "unocss": "^0.47.6",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitest": "^0.27.2"
   }
 }
