--- a/package.json
+++ b/package.json
@@ -19,20 +19,16 @@
     "check:modules": "depcheck --ignore-dirs=dist,.history"
   },
   "packageManager": "pnpm",
-  "peerDependencies": {
-    "depcheck": ">=1.4.3",
-    "nodejs": ">=14",
-    "pnpm": ">=7.25.0",
-    "tsc": ">=4.7.4"
-  },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@uiw/react-md-editor": "^3.20.2",
     "antd": "^5.0.7",
     "dayjs": "^1.11.7",
+    "i18next": "^22.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0"
   },
@@ -52,7 +48,7 @@
     "react-test-renderer": "^18.2.0",
     "typescript": "^4.9.3",
     "unocss": "^0.47.6",
-    "vite": "^4.0.0",
+    "vite": "^4.0.4",
     "vitest": "^0.27.2"
   }
 }
