--- a/package.json
+++ b/package.json
@@ -1,54 +1,60 @@
 {
-  "name": "tech-forum-website",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "author": {
-    "email": "zhangjing1024798@gmail.com",
-    "url": "https://github.com/ChuTingzj"
-  },
-  "scripts": {
-    "dev": "vite",
-    "coverage": "vitest run --coverage",
-    "test:watch": "vitest",
-    "test": "vitest run",
-    "test-ui:watch": "vitest --ui",
-    "test-ui": "vitest run --ui",
-    "build": "rm -rf ./dist && tsc && vite build",
-    "preview": "vite preview",
-    "check:modules": "depcheck --ignore-dirs=dist,.history"
-  },
-  "packageManager": "pnpm",
-  "dependencies": {
-    "@ant-design/icons": "^4.8.0",
-    "@reduxjs/toolkit": "^1.9.1",
-    "@uiw/react-md-editor": "^3.20.2",
-    "antd": "^5.0.7",
-    "dayjs": "^1.11.7",
-    "i18next": "^22.4.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^12.1.4",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.5.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.17",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@types/react-test-renderer": "^18.0.0",
-    "@unocss/preset-attributify": "^0.47.6",
-    "@unocss/preset-icons": "^0.47.6",
-    "@unocss/preset-uno": "^0.47.6",
-    "@unocss/reset": "^0.47.6",
-    "@unocss/transformer-directives": "^0.47.6",
-    "@vitejs/plugin-react": "^3.0.0",
-    "@vitest/ui": "^0.27.2",
-    "happy-dom": "^8.1.5",
-    "react-test-renderer": "^18.2.0",
-    "typescript": "^4.9.3",
-    "unocss": "^0.47.6",
-    "vite": "^4.0.4",
-    "vitest": "^0.27.2"
-  }
+	"name": "tech-forum-website",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"author": {
+		"email": "zhangjing1024798@gmail.com",
+		"url": "https://github.com/ChuTingzj"
+	},
+	"scripts": {
+		"install:husky": "husky install",
+		"lint:pretty": "pretty-quick --staged",
+		"prepare": "pnpm run install:husky",
+		"dev": "vite",
+		"coverage": "vitest run --coverage",
+		"test:watch": "vitest",
+		"test": "vitest run",
+		"test-ui:watch": "vitest --ui",
+		"test-ui": "vitest run --ui",
+		"build": "rm -rf ./dist && tsc && vite build",
+		"preview": "vite preview",
+		"check:modules": "depcheck --ignore-dirs=dist,.history"
+	},
+	"packageManager": "pnpm",
+	"dependencies": {
+		"@ant-design/icons": "^4.8.0",
+		"@reduxjs/toolkit": "^1.9.1",
+		"@uiw/react-md-editor": "^3.20.2",
+		"antd": "^5.0.7",
+		"dayjs": "^1.11.7",
+		"i18next": "^22.4.9",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-i18next": "^12.1.4",
+		"react-redux": "^8.0.5",
+		"react-router-dom": "^6.5.0"
+	},
+	"devDependencies": {
+		"@types/node": "^18.11.17",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.9",
+		"@types/react-test-renderer": "^18.0.0",
+		"@unocss/preset-attributify": "^0.47.6",
+		"@unocss/preset-icons": "^0.47.6",
+		"@unocss/preset-uno": "^0.47.6",
+		"@unocss/reset": "^0.47.6",
+		"@unocss/transformer-directives": "^0.47.6",
+		"@vitejs/plugin-react": "^3.0.0",
+		"@vitest/ui": "^0.27.2",
+		"happy-dom": "^8.1.5",
+		"husky": "^8.0.3",
+		"prettier": "^2.8.3",
+		"pretty-quick": "^3.1.3",
+		"react-test-renderer": "^18.2.0",
+		"typescript": "^4.9.3",
+		"unocss": "^0.47.6",
+		"vite": "^4.0.4",
+		"vitest": "^0.27.2"
+	}
 }
