--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@types/react-test-renderer": "^18.0.0",
-		"@unocss/preset-attributify": "^0.47.6",
-		"@unocss/preset-icons": "^0.47.6",
-		"@unocss/preset-uno": "^0.47.6",
-		"@unocss/reset": "^0.47.6",
-		"@unocss/transformer-directives": "^0.47.6",
+		"@unocss/preset-attributify": "^0.49.1",
+		"@unocss/preset-icons": "^0.49.1",
+		"@unocss/preset-uno": "^0.49.1",
+		"@unocss/reset": "^0.49.1",
+		"@unocss/transformer-directives": "^0.49.1",
 		"@vitejs/plugin-react": "^3.0.0",
 		"@vitest/ui": "^0.27.2",
 		"happy-dom": "^8.1.5",
@@ -51,9 +51,9 @@
 		"prettier": "^2.8.3",
 		"pretty-quick": "^3.1.3",
 		"react-test-renderer": "^18.2.0",
-		"typescript": "^4.9.3",
-		"unocss": "^0.47.6",
+		"typescript": "5.0.0-beta",
+		"unocss": "^0.49.1",
 		"vite": "^4.0.4",
-		"vitest": "^0.27.2"
+		"vitest": "^0.28.3"
 	}
 }
