--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -17,4 +17,6 @@ jobs:
           fetch-depth: 0
       - name: Qodana Scan
         uses: JetBrains/qodana-action@v2023.1.0
-        env: QODANA_TOKEN:${{secrets.QODANA_TOKEN}}
+        env: 
+         QODANA_TOKEN:
+          ${{secrets.QODANA_TOKEN}}
